finalizado a primeira parte, criando o cabeçalho, o formulário para adcionar cliente e a lista de cliente dinamica com a diretiva  ngFor'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-component-inserir></app-component-inserir>
+<app-cabecalho></app-cabecalho>
+<main>
+  <app-component-inserir></app-component-inserir>
+  <app-cliente-lista></app-cliente-lista>
+</main>
