Refatoração: Usando Service como SSOT SSOT(Single Source Of Truth) Componentes utilizando Service para realizar a inserção de clientes na lista e obter os clientes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-cabecalho></app-cabecalho>
 <main>
-  <app-component-inserir (clienteAdicionado)="onAdicionarCliente($event)"></app-component-inserir>
-  <app-cliente-lista [clientes]="clientes"></app-cliente-lista>
+  <app-component-inserir></app-component-inserir>
+  <app-cliente-lista></app-cliente-lista>
 </main>
