--- a/src/app/clientes/cliente-inserir/cliente-inserir-component.html
+++ b/src/app/clientes/cliente-inserir/cliente-inserir-component.html
@@ -2,24 +2,24 @@
   <form (submit)="onAddClient(clienteForm)" #clienteForm="ngForm">
     <mat-form-field appearance="fill">
       <mat-label>Digite seu nome</mat-label>
-      <input matInput type="text" ngModel name="nome" required minlength="3" />
-      <button *ngIf="nome" matSuffix mat-icon-button aria-label="Limpar" (click)="nome=''">
+      <input matInput type="text" ngModel name="nome" required minlength="3" #nomeInput />
+      <button *ngIf="nomeInput.value" matSuffix mat-icon-button aria-label="Limpar" (click)="nomeInput.value=''">
         <mat-icon>close</mat-icon>
       </button>
       <mat-error>Digite um nome válido</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Digite seu telefone</mat-label>
-      <input matInput type="text" ngModel name="fone" required />
-      <button *ngIf="fone" matSuffix mat-icon-button aria-label="Limpar" (click)="fone=''">
+      <input matInput type="text" ngModel name="fone" required #foneInput />
+      <button *ngIf="foneInput.value" matSuffix mat-icon-button aria-label="Limpar" (click)="foneInput.value=''">
         <mat-icon>close</mat-icon>
       </button>
       <mat-error>Digite um telefone válido</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Digite seu email</mat-label>
-      <input matInput type="text" ngModel name="email" required />
-      <button *ngIf="email" matSuffix mat-icon-button aria-label="Limpar" (click)="email=''">
+      <input matInput type="text" ngModel name="email" required #emailInput />
+      <button *ngIf="emailInput.value" matSuffix mat-icon-button aria-label="Limpar" (click)="emailInput.value=''">
         <mat-icon>close</mat-icon>
       </button>
       <mat-error>Digite um e-mail válido</mat-error>
