--- a/src/app/clientes/cliente-lista/cliente-lista.component.html
+++ b/src/app/clientes/cliente-lista/cliente-lista.component.html
@@ -5,6 +5,10 @@
     </mat-expansion-panel-header>
     <p>Telefone: {{ cliente.fone }}</p>
     <p>E-mail: {{ cliente.email }}</p>
+    <mat-action-row>
+      <button mat-button color="primary">EDITAR</button>
+      <button mat-button color="warn">REMOVER</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 
