--- a/src/app/clientes/cliente-lista/cliente-lista.component.html
+++ b/src/app/clientes/cliente-lista/cliente-lista.component.html
@@ -7,7 +7,7 @@
     <p>E-mail: {{ cliente.email }}</p>
     <mat-action-row>
       <button mat-button color="primary">EDITAR</button>
-      <button mat-button color="warn">REMOVER</button>
+      <button (click)="onDelete(cliente.id)" mat-button color="warn">REMOVER</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
