--- a/src/app/cabecalho/cabecalho.component.html
+++ b/src/app/cabecalho/cabecalho.component.html
@@ -1,3 +1,10 @@
 <mat-toolbar color="primary">
-  Clientes
+  <span>
+    <a routerLink="/">Clientes</a>
+  </span>
+  <ul>
+    <li>
+      <a routerLink="/criar">Novo cliente</a>
+    </li>
+  </ul>
 </mat-toolbar>
