apostila 07: fim da secao 2.2
aplicacao inicial do roteador do express

--- a/src/app/clientes/cliente-lista/cliente-lista.component.html
+++ b/src/app/clientes/cliente-lista/cliente-lista.component.html
@@ -6,7 +6,7 @@
     <p>Telefone: {{ cliente.fone }}</p>
     <p>E-mail: {{ cliente.email }}</p>
     <mat-action-row>
-      <button (routerLink)="['/editar', cliente.id]" mat-button color="primary">EDITAR</button>
+      <button (routerLink)="['editar', cliente.id]" mat-button color="primary">EDITAR</button>
 
       <button (click)="onDelete(cliente.id)" mat-button color="warn">REMOVER</button>
     </mat-action-row>
