apostila 07: fim da listagem 2.3
adicionado spinner apos carregamento da lista de cliente e na navegacao ara o forms de cadastrar e atualizar um cliente

--- a/src/app/clientes/cliente-inserir/cliente-inserir-component.css
+++ b/src/app/clientes/cliente-inserir/cliente-inserir-component.css
@@ -13,3 +13,7 @@ mat-card-actions button {
   padding: .25rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+mat-spinner{
+  margin: auto;
+}
