--- a/src/app/clientes/cliente-inserir/cliente-inserir-component.html
+++ b/src/app/clientes/cliente-inserir/cliente-inserir-component.html
@@ -1,5 +1,6 @@
 <mat-card>
-  <form (submit)="onSalvarClient(clienteForm)" #clienteForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form *ngIf="!isLoading" (submit)="onSalvarClient(clienteForm)" #clienteForm="ngForm">
     <mat-form-field appearance="fill">
       <mat-label>Digite seu nome</mat-label>
       <input matInput type="text" [ngModel]="cliente?.nome" name="nome" required minlength="3" #nomeInput />
