--- a/src/app/clientes/cliente-lista/cliente-lista.component.html
+++ b/src/app/clientes/cliente-lista/cliente-lista.component.html
@@ -1,4 +1,6 @@
-<mat-accordion *ngIf="clientes.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<!-- <mat-accordion *ngIf="clientes.length > 0"> -->
+<mat-accordion *ngIf="clientes.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let cliente of clientes">
     <mat-expansion-panel-header>
       {{ cliente.nome }}
@@ -13,4 +15,5 @@
   </mat-expansion-panel>
 </mat-accordion>
 
-<p *ngIf="clientes.length <= 0" class="mat-body-1" style="text-align: center;">Nenhum cliente cadastrado</p>
+<p *ngIf="clientes.length <= 0 && !isLoading" class="mat-body-1" style="text-align: center;">Nenhum cliente cadastrado
+</p>
