apostila 08: fim da apostila
manipulacao de imagem com o angular e o backend

--- a/src/app/clientes/cliente-lista/cliente-lista.component.css
+++ b/src/app/clientes/cliente-lista/cliente-lista.component.css
@@ -7,3 +7,14 @@
 mat-spinner{
   margin: auto;
 }
+
+
+.cliente-imagem{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.cliente-imagem > img {
+  max-width: 50%;
+}
