--- a/src/app/clientes/cliente-lista/cliente-lista.component.html
+++ b/src/app/clientes/cliente-lista/cliente-lista.component.html
@@ -5,6 +5,9 @@
     <mat-expansion-panel-header>
       {{ cliente.nome }}
     </mat-expansion-panel-header>
+    <div class="cliente-imagem">
+      <img [src]="cliente.imagemURL" [alt]="cliente.nome">
+    </div>
     <p>Telefone: {{ cliente.fone }}</p>
     <p>E-mail: {{ cliente.email }}</p>
     <mat-action-row>
